# llm-agent-prototype-rust

./: .gitignore  Cargo.toml  NOTICE.md  README.md  compose.yaml  docker-compose.yml
.devcontainer/: devcontainer.json
docker/qdrant/: Dockerfile
docker/rust/: Dockerfile
src/: api_state.rs  build.rs  certification.rs  chat.rs  chat_gpt.rs  chat_gpt_api.rs  error_conversion.rs  main.rs  main_rest.rs  speak.rs  vector_db.rs
src/chat/: chat.proto  memory.rs  my_chat.rs  router.rs
src/chat_gpt/: client.rs  specification.rs
src/chat_gpt_api/: client.rs  memory.rs  specification.rs
src/proto/: chat.proto
src/speak/: my_speak.rs  speak.proto
src/vector_db/: database.rs  tokenizer.rs  vector_memories.rs
