[package]
name = "llm-agent-prototype-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
serde_json = "1.0.96"
hyper-tls = "0.5.0"
tokio-stream = "0.1.14"
async-stream = "0.3.5"
