[package]
name = "llm-agent-prototype-rust"
version = "0.1.0"
edition = "2021"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
serde_json = "1.0.96"
hyper-tls = "0.5.0"
tokio-stream = "0.1.14"
async-stream = "0.3.5"
tower-http = { version = "0.4.0", features = ["full"] }
chrono = { version = "0.4.26", features = ["serde"] }
tonic = "0.9.2"
prost = "0.11.9"
tonic-reflection = "0.9.2"
futures-util = "0.3.28"

[build-dependencies]
tonic-build = "0.9.2"
